# DeepRhapsody

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.gemini/: system.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: NeuralDebug.agent.md
.github/workflows/: ci.yml
docs/tutorials/: claude-code.md  claude-mcp.md  copilot-cli.md  gemini-cli.md  langchain-agents.md  llm-debugging.md  openai-codex.md  pilothub.md  quick-start.md  standalone-agent.md
examples/: DeepRhapsody.sln  ai-driven-debugging-session.md  concurrent_pipeline.c  cpp-debugging-example.md  csharp-debugging-example.md  llm_debug_api_probe.md  llm_debug_hallucination.md  llm_debug_knowledge_gap.md  neuraldebug-architecture.md  python-debugging-example.md  sample_buggy_grades.py  sample_buggy_stats.c  standalone-agent-demo.md  test_asm.c  try_gpt2_medium.py
examples/sample_buggy_inventory/: Program.cs
integrations/: README.md  __init__.py
integrations/langchain/: tools.py
integrations/mcp/: server.py
integrations/openai/: adapter.py  functions.json
playground/: README.md  ai_debug_demo.py  demo_standalone_agent.py  neuraldebug_tour.ipynb  try_neuraldebug.py
prompts/: universal.md
src/: __init__.py
src/agent/: __init__.py  cli.py  config.py  model_catalog.py  runner.py  system_prompt.py  tui.py
src/hub/: __init__.py  client.py  registry.py  skill_spec.py
src/neuraldebug/: __init__.py  asm_debug_session.py  cpp_debug_session.py  (+11 more)
tests/: conftest.py  test_agent_anthropic.py  test_agent_cli.py  test_agent_config.py  test_agent_openai.py  test_agent_providers.py  test_agent_runner.py  test_agent_system_prompt.py  test_agent_tools.py  test_agent_tui.py  test_base_server.py  test_cpp_advanced.py  test_cpp_toolchain.py  test_debug_common.py  test_gdb_mi_parser.py  test_hub.py  test_integrations.py  test_language_meta.py  test_language_registry.py  test_llm_adapters.py  test_mcp_server.py  test_protocol.py  test_python_debugger.py  test_tool_forge.py
(+74 files in other folders)
